--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "isomorphic-fetch": "^2.2.1",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
     "pg": "^7.17.1",
