--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "isomorphic-fetch": "^2.2.1",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "pg": "^7.17.1",
     "xss": "^1.0.6"
   },
