--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
