--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "deploy": "git push heroku master"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.16.3"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -27,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
+    "npm": "^6.13.7",
     "path": "^0.12.7",
     "pg": "^7.17.1",
     "xss": "^1.0.6"
